Completed authentication (signup, login, logout)

--- a/producthunt/producthunt/static/account/account.css
+++ b/producthunt/producthunt/static/account/account.css
@@ -7,8 +7,8 @@ html {
     background: #60a3bc !important;
 }
 .user_card {
-    height: 400px;
-    width: 350px;
+    /*height: 500px;*/
+    width: 400px;
     margin-top: auto;
     margin-bottom: auto;
     background: #f39c12;
