--- a/producthunt/account/templates/account/signup.html
+++ b/producthunt/account/templates/account/signup.html
@@ -34,6 +34,11 @@
                     <div class="d-flex justify-content-center mt-3 login_container">
                         <button type="submit" name="button" class="btn login_btn">Sign Up</button>
                     </div>
+                    {% if error %}
+                    <div class="alert alert-danger mt-3" role="alert">
+                      {{ error }}
+                    </div>
+                    {% endif %}
                 </form>
             </div>
 
