--- a/producthunt/producthunt/templates/base.html
+++ b/producthunt/producthunt/templates/base.html
@@ -45,6 +45,7 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'create' %}"><span class="oi oi-plus"></span></a>
                     <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form method="POST" action="{% url 'logout' %}" id="logout">
                         {% csrf_token %}
