--- a/producthunt/producthunt/templates/base.html
+++ b/producthunt/producthunt/templates/base.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap core CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <link rel="stylesheet" href="{% static 'open-iconic/font/css/open-iconic-bootstrap.css' %}">
       <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -45,7 +46,7 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'create' %}"><span class="oi oi-plus"></span></a>
+                    <a class="nav-item nav-link" href="{% url 'create' %}"><span class="oi oi-plus"></span> </a>
                     <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form method="POST" action="{% url 'logout' %}" id="logout">
                         {% csrf_token %}
