--- a/producthunt/producthunt/templates/base.html
+++ b/producthunt/producthunt/templates/base.html
@@ -47,6 +47,7 @@
                 <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'create' %}"><span class="oi oi-plus"></span> </a>
+                    <a class="nav-item nav-link" href="{% url 'list' %}">My Products</a>
                     <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form method="POST" action="{% url 'logout' %}" id="logout">
                         {% csrf_token %}
